--- a/lotfresh-front/index.html
+++ b/lotfresh-front/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <meta charset="UTF-8" />
     <link
       rel="icon"
@@ -31,3 +32,5 @@
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
   </body>
 </html>
+
+
