--- a/lotfresh-front/index.html
+++ b/lotfresh-front/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.4.0/kakao.min.js"
-  integrity="sha384-mXVrIX2T/Kszp6Z0aEWaA8Nm7J6/ZeWXbL8UpGRjKwWe56Srd/iyNmWMBhcItAjH" crossorigin="anonymous"></script>
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/v1/kakao.min.js"></script>
+
 
     <meta charset="UTF-8" />
     <link
@@ -35,8 +35,5 @@
   </body>
 </html>
 
-<script>
-  Kakao.init('186f2e1e76badfa97bcc72139441dd15');
-</script>
 
 
