add: add the script dependency

--- a/lotfresh-front/index.html
+++ b/lotfresh-front/index.html
@@ -35,5 +35,7 @@
   </body>
 </html>
 
-
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+  Kakao.init('186f2e1e76badfa97bcc72139441dd15'); 
+</script>
